--- a/front-eventos-formularios/classe-04/index.html
+++ b/front-eventos-formularios/classe-04/index.html
@@ -24,6 +24,29 @@
   </body>
 
   <script>
+
+    const balao = document.querySelector('img')
+
+   
+    let tamanho = 1
+        
+    function estourar() {
+      if (balao.style.transform === `scale(2)`) {
+        balao.src = 'estouro.svg'
+        balao.removeEventListener('click', crescer)
+          return;
+      }        
+    }
+
+    function crescer() {
+
+      balao.style.transform = `scale(${tamanho})`;
+      tamanho += 0.1
+    }
+
+    balao.addEventListener('click', crescer);
+    balao.addEventListener('click', estourar);
+
   </script>
 
 </html>
