--- a/front-js-DOM/classe-05/index.html
+++ b/front-js-DOM/classe-05/index.html
@@ -50,6 +50,14 @@
 </body>
 
 <script>
+    //resposta tao simples e eu estava me batendo todo e complicando tudo, fellsbad =[
+        
+    const popup = document.querySelector('.popup');
+
+    function togglePopup() {
+        popup.style.display = popup.style.display === 'flex' ? 'none' : 'flex';
+    }
+    
 </script>
 
 </html>
