--- a/front-eventos-formularios/casa-06/index.html
+++ b/front-eventos-formularios/casa-06/index.html
@@ -9,6 +9,20 @@
 
   <body>
 
+    <input type="number" name="search" id="search">
+    
+    <div>
+
+      <h1></h1>
+
+      <img src="">
+      
+      <p></p>
+
+    </div>
+
+    <span></span>
+
   </body>
 
   <script>
