--- a/front-eventos-formularios/casa-06/index.html
+++ b/front-eventos-formularios/casa-06/index.html
@@ -16,7 +16,7 @@
       <h1></h1>
 
       <img src="">
-      
+
       <p></p>
 
     </div>
@@ -59,6 +59,15 @@
       stack: 'Backend',
       avatar: `${basePath}juninho.jfif`
     }]
+
+    const input = document.querySelector('input')
+    const h1 = document.querySelector('h1')
+    const img = document.querySelector('img')
+    const p = document.querySelector('p')
+    const span = document.querySelector('span')
+  
+  
+  
   </script>
 
 </html>
