--- a/front-eventos-formularios/casa-07/index.html
+++ b/front-eventos-formularios/casa-07/index.html
@@ -27,6 +27,14 @@
   </body>
 
   <script>
+
+    const primeiro = document.querySelector('.primeiro')
+    const primeiroDropDownTemperaturas = primeiro.querySelector('.drpTemperaturas')
+    const primeiroInput = primeiro.querySelector('input')
+    const segundo = document.querySelector('.segundo')
+    const segundoDropDownTemperaturas = segundo.querySelector('.drpTemperaturas')
+    const segundoInput = segundo.querySelector('input')
+    
   </script>
 
 </html>
